--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  spring:
+    build:
+      context: .
+      dockerfile: spring.dockerfile
+    ports:
+      - 8080:8080
+    depends_on:
+      - postgres
+    networks:
+      - desafio-dev
+    restart: on-failure
+
   postgres:
     image: postgres:9.4
     container_name: postgres
@@ -10,3 +22,9 @@ services:
       - POSTGRES_DB=banco
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
+    networks:
+      - desafio-dev
+
+networks:
+  desafio-dev:
+    driver: bridge
