--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     password: postgres
-    url: jdbc:postgresql://localhost:5432/banco
+    url: jdbc:postgresql://postgres:5432/banco
     username: postgres
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
